<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_menu1"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_menu1" />
        <item
            android:id="@+id/nav_menu2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_menu2" />
        <item
            android:id="@+id/nav_menu3"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_menu3" />
        <item
            android:id="@+id/nav_menu4"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_menu4" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_aboutus" />
    </group>
</menu>
