<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.custom.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

     <!--   <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />-->
    </fragment>
   <!-- <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.custom.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>-->


    <fragment
        android:id="@+id/nav_menu1"
        android:name="com.example.custom.ui.menu1.Menu1Fragment"
        android:label="@string/menu_menu1"
        tools:layout="@layout/fragment_menu1" />
    <fragment
        android:id="@+id/nav_menu2"
        android:name="com.example.custom.ui.menu2.Menu2Fragment"
        android:label="@string/menu_menu2"
        tools:layout="@layout/fragment_menu2" />
    <fragment
        android:id="@+id/nav_menu3"
        android:name="com.example.custom.ui.menu3.Menu3Fragment"
        android:label="@string/menu_menu3"
        tools:layout="@layout/fragment_menu3" />
    <fragment
        android:id="@+id/nav_menu4"
        android:name="com.example.custom.ui.menu4.Menu4Fragment"
        android:label="@string/menu_menu4"
        tools:layout="@layout/fragment_menu4" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.custom.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.custom.ui.aboutus.AboutusFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_aboutus" />
</navigation>